--- a/index1.html
+++ b/index1.html
@@ -21,32 +21,25 @@
         <input type="color" id="stroke"><br>Outline Width
         <input type="number" id="stSize" step="1" min="0" max="800" value="2" />px
         <button onclick="swTool('fill')" id="fill">Change color</button><br><br>EXPORT<br>
-        <button id="export">Export SVG</button> <br>
+        <button id="export">Export SVG</button> <br><br>
 
-        <details style="display:none;"></details>
-        <details style="display:none;">
+        <details>
             <summary>Properties</summary>
             <details style="display:inline;">
-                <summary style="display:inline;">Text</summary>
-                <br>Text</details><br>
-                Y <input type="text" id="y">X <input type="text" id="x"><br>
-            <details style="display:inline;"><summary style="display:inline;">Rectangle</summary><br>
-                width <input type="text" id="width"><br>
-                height <input type="text" id="height"></details> 
+                <summary style="display:inline;">Text</summary><br>
+                Y <input type="text" id="y">X <input type="text" id="x"></details><br>
             <details style="display:inline;">
-                <summary style="display:inline;">Circle</summary> <br>
+                <summary style="display:inline;">Rectangle</summary><br>
+                width <input type="text" id="width"><br>
+                height <input type="text" id="height"></details><br>
+            <details style="display:inline;">
+                <summary style="display:inline;">Circle</summary><br>
                 radius <input type="text" id="r">
             </details>
         </details>
     </div>
     
-    <div class="opt" style="display: none;">
-        <a draggable="true" class="dragout" ondragend="document.querySelector('.opt').style.display='none';" data-downloadurl="image/xml+svg:exported.svg:data://image/xml+svg;base64,">drag this out to download (Chrome)</a><br>
-        <textarea class="optText" onchange="document.querySelector('.opt').style.display = 'none';"></textarea><br>
-    </div>
     <div id="canvasWrap">
         <svg onmousedown="click_in(event)" onmouseup="click_out(event); createObject(this); " id="canvas" xmlns="http://www.w3.org/2000/svg" version="1.1">
    </svg></div><br>
 </body>
-
-
