--- a/index1.html
+++ b/index1.html
@@ -10,9 +10,9 @@
 <body>
     <div class="SW_id">SW Project - Kim Woo-chan, Hong Ji-hwan </div><hr>
     <div class="props">
-        <div id="pallet">PALLET</div><hr> TEXT <br>
+        <div class="title">PALLET</div><hr> TEXT <br>
         <input type="text" id="textin" style="display: none;">
-        <button id="text">Text</button>
+        <button onclick="swTool('text')" id="text">Text</button><br>
         <br><br> DIAGRAM <br>
         <button onclick="swTool('circle')" id="circle">Circle</button><br>
         <button onclick="swTool('rect')" id="rect">Rectangle</button> <br>
@@ -23,23 +23,19 @@
         <button onclick="swTool('fill')" id="fill">Change color</button><br><br>EXPORT<br>
         <button id="export">Export SVG</button> <br><br>
 
-        <details>
-            <summary>Properties</summary>
-            <details style="display:inline;">
-                <summary style="display:inline;">Text</summary><br>
-                Y <input type="text" id="y">X <input type="text" id="x"></details><br>
-            <details style="display:inline;">
-                <summary style="display:inline;">Rectangle</summary><br>
-                width <input type="text" id="width"><br>
-                height <input type="text" id="height"></details><br>
-            <details style="display:inline;">
-                <summary style="display:inline;">Circle</summary><br>
-                radius <input type="text" id="r">
-            </details>
-        </details>
+
     </div>
-    
     <div id="canvasWrap">
         <svg onmousedown="click_in(event)" onmouseup="click_out(event); createObject(this); " id="canvas" xmlns="http://www.w3.org/2000/svg" version="1.1">
-   </svg></div><br>
+   </svg></div>
+   <div class="props">
+        <div class="title">PROPERTIES</div><hr> 
+        <button onclick="swTool('select')" id="select">Select</button><br><br>
+        POINT <br>
+        Y <input type="text" id="y">X <input type="text" id="x"></details><br><br>RECTANGLE<br>
+        width <input type="text" id="width"><br>
+        height <input type="text" id="height"></details><br>
+        ID <input type="text" id="objectID"></details><br>
+        <br>CIRCLE<br>radius <input type="text" id="r">
+   </div>
 </body>
