--- a/index1.html
+++ b/index1.html
@@ -30,12 +30,12 @@
    </svg></div>
    <div class="props">
         <div class="title">PROPERTIES</div><hr> 
-        <button onclick="swTool('select')" id="select">Select</button><br><br>
+        ID<br><input type="text" id="elementID"><br><br>
         POINT <br>
-        Y <input type="text" id="y">X <input type="text" id="x"></details><br><br>RECTANGLE<br>
+        Y <input type="text" id="y">X <input type="text" id="x"><br><br>RECTANGLE<br>
         width <input type="text" id="width"><br>
-        height <input type="text" id="height"></details><br>
-        ID <input type="text" id="objectID"></details><br>
-        <br>CIRCLE<br>radius <input type="text" id="r">
+        height <input type="text" id="height"><br>
+        ID <input type="text" id="objectID"><br>
+        <br>CIRCLE<br>radius <input type="text" id="r"><br>
    </div>
 </body>
